# unslop

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  noslop.py  pyproject.toml  unslop.py
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: mirror.yml  pages.yml  release.yml  test.yml
eval/: README.md  run_eval.py
eval/corpus/ai/: 01-blog-productivity.txt  02-product-copy.txt  03-linkedin-post.txt  04-tutorial-python.txt  05-wiki-bio.txt  06-marketing-email.txt  07-listicle-travel.txt  08-explainer-crypto.txt  09-review-headphones.txt  10-essay-remote-work.txt  11-readme-project.txt  12-newsletter-ai.txt  13-cover-letter.txt  14-recipe-intro.txt  15-selfhelp-habits.txt  16-corporate-announcement.txt  17-blog-morning-routine.txt  18-chatbot-disclaimer-qa.txt  19-corporate-bio.txt  MANIFEST.md
eval/corpus/human/: 01-essay-twain.txt  02-essay-thoreau.txt  03-essay-james.txt  04-fiction-cather.txt  05-fiction-london.txt  06-fiction-wharton.txt  07-journalism-bly.txt  08-journalism-riis.txt  09-letters-stewart.txt  10-memoir-grant.txt  11-practical-child.txt  12-practical-farmer.txt  13-science-darwin.txt  14-science-faraday.txt  16-docs-cpython.txt  17-law-civil-code-ru.txt  SOURCES.md
skills/noslop/: SKILL.md
skills/unslop/: SKILL.md
tests/: test_noslop.py  test_unslop.py
tests/fixtures/clean/: casual-note.md  plain-changelog.md
tests/fixtures/slop/: corporate-buzzwords.md  hedged-and-padded.md
web/: app.js  detector.js  index.html  manifest.webmanifest  parity.js  styles.css
web/i18n/: ar.js  bn.js  cs.js  da.js  de.js  el.js  en.js  es.js  fa.js  fi.js  fr.js  he.js  hi.js  hu.js  id.js  it.js  ja.js  ko.js  nb.js  nl.js  pl.js  pt-BR.js  registry.js  ro.js  ru.js  sv.js  th.js  tl.js  tr.js  uk.js  vi.js  zh-Hans.js  zh-Hant.js
