[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "unslop"
version = "0.1.0"
description = "Flag the AI tells in a piece of writing, so you can rewrite them before you ship."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Cole Munz" }]
keywords = ["writing", "ai", "llm", "linter", "prose", "style", "editing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
]

[project.scripts]
unslop = "unslop:main"

[project.urls]
Homepage = "https://github.com/munzzyy/unslop"
Issues = "https://github.com/munzzyy/unslop/issues"

[tool.setuptools]
py-modules = ["unslop"]
